fix(components): [notification] action buttons left margin
default gap between buttons is reduced!

when action buttons does not fit in one line button on second line has left margin from line start
with flex and gap button does not have left margin from line start

--- a/packages/theme-chalk/src/notification.scss
+++ b/packages/theme-chalk/src/notification.scss
@@ -65,6 +65,16 @@
     transition: width 0.1s;
   }
 
+  @include e(actions) {
+    display: inline-flex;
+    gap: 0.25rem;
+    flex-wrap: wrap;
+
+    .el-button + .el-button {
+      margin-left: 0;
+    }
+  }
+
   & .#{$namespace}-notification__icon {
     height: getCssVar('notification-icon-size');
     width: getCssVar('notification-icon-size');
